wier/force-app/main/default/objects/Material_Enrollment__c/Material_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Material</label>
    <nameField>
        <displayFormat>MID-{0000000000}</displayFormat>
        <label>Material ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>