wier/force-app/main/default/objects/Material_Enrollment__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <length>120</length>
    <type>Text</type>
</CustomField>