wier/force-app/main/default/objects/Material_Enrollment__c/fields/Delivery_Lead_Time_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Lead_Time_Weeks__c</fullName>
    <label>Delivery Lead Time (Tendering stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>