wier/force-app/main/default/objects/Material_Enrollment__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <defaultValue>&quot;DB1&quot;</defaultValue>
    <label>Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>