wier/force-app/main/default/objects/Material_Enrollment__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>