wier/force-app/main/default/objects/Material_Enrollment__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipName>Material_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>