wier/force-app/main/default/objects/Material_Enrollment__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipName>Material_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>