wier/force-app/main/default/objects/Material_Enrollment__c/fields/Procurement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Comments__c</fullName>
    <label>Procurement Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>