wier/force-app/main/default/objects/Material_Enrollment__c/fields/Reqd_as_per_Final_jobs_scope_in_PO__c.field-meta.xml
<CustomField>
    <fullName>Reqd_as_per_Final_jobs_scope_in_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Procurement to advise lead time</description>
    <label>Procurement to advise lead time</label>
    <type>Checkbox</type>
</CustomField>