wier/force-app/main/default/objects/Material_Enrollment__c/fields/Revalidated_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Revalidated_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalidated Checkbox</label>
    <type>Checkbox</type>
</CustomField>