wier/force-app/main/default/objects/Material_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>