wier/force-app/main/default/objects/Material_Enrollment__c/fields/Submission_due_date__c.field-meta.xml
<CustomField>
    <fullName>Submission_due_date__c</fullName>
    <label>Submission due date</label>
    <type>Date</type>
</CustomField>