wier/force-app/main/default/objects/Material_Enrollment__c/fields/Supp_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Supp_Item_No__c</fullName>
    <label>Supp Item No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>