wier/force-app/main/default/objects/Material_Enrollment__c/fields/Supplier_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Price__c</fullName>
    <label>Supplier Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>