wier/force-app/main/default/objects/Material_Enrollment__c/fields/Supply_Chain_TAT_Hours__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_TAT_Hours__c</fullName>
    <formula>(LastModifiedDate -  CreatedDate ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Chain TAT (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>