wier/force-app/main/default/objects/Material_Enrollment__c/fields/Tendering_Comments__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Comments__c</fullName>
    <label>Tendering Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>