wier/force-app/main/default/objects/Material_Enrollment__c/fields/Unit_of_Measurment__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurment__c</fullName>
    <label>Unit of Measurment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Kgs.</fullName>
            </value>
            <value>
                <fullName>Ltr.</fullName>
            </value>
            <value>
                <fullName>Ton</fullName>
            </value>
            <value>
                <fullName>Nos.</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>cm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>