wier/force-app/main/default/objects/Material_Enrollment__c/recordTypes/Lock_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Lock_Record_type</fullName>
    <active>true</active>
    <label>Lock Record type</label>
</RecordType>