wier/force-app/main/default/objects/Material_Enrollment__c/recordTypes/Non_Standard_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Non_Standard_Record_Type</fullName>
    <active>true</active>
    <label>Non Standard Record Type</label>
</RecordType>