wier/force-app/main/default/objects/Material_Enrollment__c/recordTypes/Standard_Material.recordType-meta.xml
<RecordType>
    <fullName>Standard_Material</fullName>
    <active>true</active>
    <label>Standard Material</label>
</RecordType>