wier/force-app/main/default/objects/Material_Enrollment__c/validationRules/Non_Standard_Material_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Standard_Material_validation_rule</fullName>
    <active>true</active>
    <description>Non Standard_Material_validation_rule</description>
    <errorConditionFormula>AND( RecordTypeId =&apos;012b0000000DcKc&apos;, Material__r.Name !=&apos;Non Standard&apos;)</errorConditionFormula>
    <errorDisplayField>Material__c</errorDisplayField>
    <errorMessage>Please select the Non standard Material.</errorMessage>
</ValidationRule>