wier/force-app/main/default/objects/Material_Enrollment__c/validationRules/Standard_Material_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_Material_validation_rule</fullName>
    <active>true</active>
    <description>Standard_Material_validation_rule</description>
    <errorConditionFormula>AND( RecordTypeId =&apos;012b0000000DcKd&apos;, Material__r.Name =&apos;Non Standard&apos;)</errorConditionFormula>
    <errorDisplayField>Material__c</errorDisplayField>
    <errorMessage>Please select the standard Material.</errorMessage>
</ValidationRule>